# hsu-example2

./: Makefile.config  README.md  nuitka_excludes.txt  requirements.txt
api/proto/: echoservice.proto  generate-go.bat  generate-go.sh
go/: go.mod  go.sum
go/cmd/cli/echogrpccli/: main.go
go/cmd/srv/echogrpcsrv/: main.go
go/pkg/control/: main_echo.go
go/pkg/logging/sprintf/: std_sprintf_logger.go
python/: nuitka_excludes.txt  pyproject.toml  run_server_wrapper_generated.py
python/srv/: run_server.py
python/srv/domain/: simple_handler.py
