[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsu-echo"
version = "1.0.0"
description = "HSU Repository Portability Framework - Approach 2 Python Example"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "protobuf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.950",
    "ruff>=0.0.280",
]

build = [
    "nuitka>=1.8.0",
]

[tool.setuptools]
packages = [
    "hsu_echo",
    "hsu_echo.generated",
    "hsu_echo.generated.api",
    "hsu_echo.generated.api.proto", 
    "hsu_echo.control",
    "hsu_echo.domain",
    "hsu_echo_simple",
]

[tool.setuptools.package-dir]
"hsu_echo" = "lib"
"hsu_echo_simple" = "srv/domain" 